--- a/darkblade.eng.html
+++ b/darkblade.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAwHlJasK" id="custom-html-2g" data-rv-view="308">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAwHlJasK" id="custom-html-2g" data-rv-view="562">
   <h1><br><br><br><br>Darkblade</h1>
    <hr>
   <p>Season 1 Episode 12</p>
