--- a/episodeseng.html
+++ b/episodeseng.html
@@ -66,20 +66,20 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><div class="container cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="515">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><div class="container cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="769">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rYP9eNMdD6" id="custom-html-5o" role="tablist" data-rv-view="515">
+    </div><ul class="nav nav-tabs cid-rYP9eNMdD6" id="custom-html-5o" role="tablist" data-rv-view="769">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -89,7 +89,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="515">
+</ul><div class="tab-content cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="769">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
