--- a/gorizilla.eng.html
+++ b/gorizilla.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAR9J7l2u" id="custom-html-3e" data-rv-view="383">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAR9J7l2u" id="custom-html-3e" data-rv-view="637">
   <h1><br><br><br><br>Gorizilla</h1>
    <hr>
   <p>Season 2 Episode 10</p>
