--- a/kungfood.eng.html
+++ b/kungfood.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAwZBrcof" id="custom-html-2k" data-rv-view="314">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAwZBrcof" id="custom-html-2k" data-rv-view="568">
   <h1><br><br><br><br>Kung Food</h1>
    <hr>
   <p>Season 1 Episode 14</p>
