--- a/miraclequeen.eng.html
+++ b/miraclequeen.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBC9WGtCu" id="custom-html-3w" data-rv-view="509">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBC9WGtCu" id="custom-html-3w" data-rv-view="763">
   <h1><br><br><br><br>Miracle Queen (The Battle of the Miraculous-Part 2)</h1>
    <hr>
   <p>Season 3 Episode 26</p>
