--- a/thegamer.eng.html
+++ b/thegamer.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAxcNL6tb" id="custom-html-2m" data-rv-view="317">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAxcNL6tb" id="custom-html-2m" data-rv-view="571">
   <h1><br><br><br><br>The Gamer</h1>
    <hr>
   <p>Season 1 Episode 15</p>
