--- a/weredad.eng.html
+++ b/weredad.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBwyNypLG" id="custom-html-3a" data-rv-view="449">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBwyNypLG" id="custom-html-3a" data-rv-view="703">
   <h1><br><br><br><br>Weredad</h1>
    <hr>
   <p>Season 3 Episode 6</p>
