--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="page80.html" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
