--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="page80.html" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                <li class="nav-item ">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
                     </a>
                 </li></ul>
             
