--- a/page80.html
+++ b/page80.html
@@ -10,18 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Full episodes/eng
-  <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
-         <p style="margin-top: 10px;margin-bottom: 0px;">SELECT LANGUAGE: <br>
-
-
-         <a title='ANGLAIS' href='page80.html' style='color:#ffffff61;'>
-            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
-         </a>
-         <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#ffffff61;'>
-            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-fr.jpg'/> FRANÇAIS
-           </a>     </p>
-  </title>
+  <title>Full episodes/eng</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -87,7 +76,17 @@
 
 <section class="engine"><a href="https://mobirise.info/j">website templates</a></section><div class="container cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="359">
     <div class="row">
-        <h1><br><br><br><br><br>Full episodes<br><br></h1>
+       <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
+         <p style="margin-top: 10px;margin-bottom: 0px;">SELECT LANGUAGE: <br>
+
+
+         <a title='ANGLAIS' href='page80.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
+         </a>
+         <a title='FRANÇAIS' href='miraclequeen.fr.html' style='color:#ffffff61;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-fr.jpg'/> FRANÇAIS
+           </a>     </p> 
+      <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
     </div><ul class="nav nav-tabs cid-rXAJ5IF6V2" id="custom-html-3h" role="tablist" data-rv-view="359">
   <li class="nav-item">
